assets and minification

--- a/src/card.css
+++ b/src/card.css
@@ -2,6 +2,7 @@
     padding: 20px;
     margin-top: 20px;
     border: 2px solid green;
+    background: resolve('SkySailing.jpg');
     width: 500px;
 
     h2 {
